Update lint setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/papandreou/suspects.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . && prettier --check '**/*.js'"
   },
   "bin": {
     "suspects": "./suspects.js"
@@ -29,8 +30,13 @@
   },
   "devDependencies": {
     "eslint": "^5.7.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-config-pretty-standard": "^2.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.14.3"
   }
 }
