--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.14.3"
+    "prettier": "~1.19.1"
   }
 }
